--- a/src/templates/troposphere_aws_service2.py.tpl.j2
+++ b/src/templates/troposphere_aws_service2.py.tpl.j2
@@ -22,6 +22,12 @@ from tropoloco import resource_to_troposphere, property_to_troposphere
     {%- endif -%}
 {%- endmacro %}
 
+{%- macro lookup_property_type_overrides(dictionary, key) %}
+    {%- if key in dictionary %}{{ dictionary[key] }}
+    {%- else -%}{{ key[1] }}
+    {%- endif -%}
+{%- endmacro %}
+
 {%- macro lookup_resource_type_overrides(dictionary, key) %}
     {%- if key in dictionary %}{{ dictionary[key] }}
     {%- else -%}{{ key[1] }}
@@ -34,6 +40,13 @@ from tropoloco import resource_to_troposphere, property_to_troposphere
     {%- endif -%}
 {%- endmacro %}
 
+{%- macro get_value(service, class_name) %}
+    {%- if key in dictionary %}{{ dictionary[key] }}
+    {%- else -%}{{ key[1] }}
+    {%- endif -%}
+{%- endmacro %}
+
+
 
 ######################################################################
 # AWS Property
@@ -41,7 +54,7 @@ from tropoloco import resource_to_troposphere, property_to_troposphere
 
 
 {% for aws_property in properties %}
-class {{aws_property.name}}(BaseModel):
+class {{aws_property.class_name}}(BaseModel):
     """
     {%- if aws_property.Documentation -%}
     {{ aws_property.Documentation }}
